# physical-ai-book

./: .gitignore  .mcp.json  404.html  README.md  index.html  login.html  profile.html  signup.html  sitemap.xml
.claude/: settings.local.json
.specify/: changelog.md
backend/: .dockerignore  Dockerfile  README.md  RENDER_FIX.md  alembic.ini  docker-compose.yml  ingest_embeddings.py  pyproject.toml  render.yaml  requirements.txt  start.sh  test_ingestion.py  test_qdrant.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_chat_tables.py  002_create_users_table.py  003_create_user_backgrounds_table.py  004_create_personalized_content_cache.py  005_create_translation_cache.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  chat_routes.py  chatkit_routes.py  content_routes.py  embeddings_routes.py
backend/app/api/user/: routes.py  schemas.py  service.py
backend/app/auth/: config.py  routes.py  schemas.py  service.py
backend/app/models/: __init__.py  chat_history.py  personalized_content_cache.py  schemas.py  translation_cache.py  user.py  user_background.py
backend/app/services/: agent_service.py  db_service.py  embeddings_service.py  openai_service.py  personalization_service.py  rag_service.py  translation_service.py
backend/app/utils/: logger.py  markdown_processor.py
book-source/: .gitignore  README.md  TEXT_SELECTION_FEATURE.md  URDU_TRANSLATION_FIX.md  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
docs/: chapter-01.html  chapter-02.html  chapter-03.html  tags.html  (+5 more)
(+1223 files in other folders)
